Add edit update destroy
削除機能を実装
編集機能、編集画面はこれから

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -15,6 +15,10 @@
         <div class = "posted">
           <p class="posted-name"><%= tweet.user.name %></p>
           <p class="posted-date"><%= tweet.updated_at.in_time_zone('Tokyo').to_s[0..15] %></p>
+          <% if user_signed_in? && tweet.user_id == current_user.id %>
+            <%= link_to("編集","tweets/#{tweet.id}/edit")%>
+            <%= link_to("削除","tweets/#{tweet.id}",method: :delete) %>
+          <% end %>
         </div>
       </div>
     </div>
