--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -4,6 +4,6 @@
     <%= f.text_area :text,placeholder: '概要' %>
     <%= f.text_field :image_url,placeholder: 'url' %>
     <%= f.text_field :adress,placeholder: '住所' %>
-    <%= f.submit value: '投稿'%>
+    <%= f.submit value: '再投稿'%>
   <% end %>
 </div>
