--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -46,3 +46,16 @@ footer{
 .posted-date{
 
 }
+
+.hidden_menu{
+  color:black;
+}
+
+.presentation__box{
+  padding-left: 20px;
+  padding-bottom:20px;
+}
+.presentation__text{
+  padding-left:20px;
+  opacity:0;
+}
