--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -2,13 +2,13 @@
   <div class="col">
     <div class="card">
       <div class="card-image">
-        <img src="<%= tweet.image_url %>">
+        <img src="<%= tweet.image_url %>" class="okzoom">
       </div>
       <div class="card-content">
         <p style="font-size:20px;font-weight:900">
           <span><%= tweet.title %></span>
             <i class="material-icons">
-              <%= link_to("flight","https://earth.google.com/web/search/#{tweet.title}",:onclick=>"window.open(this.href,'hoge', 'height=800, width=800');return false;") %>
+              <%= link_to("flight","https://earth.google.com/web/search/#{tweet.title}",:class => "plane",:onclick=>"window.open(this.href,'hoge', 'height=800, width=800');return false;") %>
             </i>
           </p>
         <p><%= simple_format(tweet.text) %></p>
@@ -17,7 +17,7 @@
           <p class="posted-date"><%= tweet.updated_at.in_time_zone('Tokyo').to_s[0..15] %></p>
           <% if user_signed_in? && tweet.user_id == current_user.id %>
             <%= link_to("編集","tweets/#{tweet.id}/edit")%>
-            <%= link_to("削除","tweets/#{tweet.id}",method: :delete) %>
+            <%= link_to("削除","tweets/#{tweet.id}",method: :delete,:id => "delete-botton",:onClick=>"disp()") %>
           <% end %>
         </div>
       </div>
